html/static/style.css
/* {
    border-width: 1px;
    border-color: fuchsia;
    border-style: solid;
}*/

.not-available {

  background-color: grey !important;
}
.completed {

  background-color: #14b967 !important;
}

body {
    margin: 0px 0px 0px 0px;
    background-color: #e5e5e5;
    color: #4d4d4d;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

header {
    position: fixed;
    top: 0px;
    left: 0px;
    margin: 0px;
    height: 64px;
    width: 100%;
    display: flex;
    background-color: #262626;
    color: #b3b3b3;
    font-size: 12pt;
    box-shadow: 0px 0px 10px 0px black;
    z-index: 6;
}

main {
    margin-top: 64px;
    margin-bottom: 64px;
    z-index: 5;
    text-align: center;
    width: 100%;
    padding-top: 1px;
    flex: 1;
    display: block;
}

footer {
    position: fixed;
    bottom: 0px;
    width: 100vw;
    display: flex;
    background-color: #b3b3b3;
    align-self: center;
    align-items: center;
}

#footer-left {
    padding-left: 16px;
}

#footer-center {
    text-align: center;
}

#footer-right {
    text-align: right;
    padding-right: 16px;
}

.challenge {
    height: 100%;
    width: 100%;
    /*width: 256px;*/
    /*z-index: 1;*/
    /*height: 64px;*/
    background-color: white;
    box-shadow: 2.5px 2.5px 5px -2.5px black;
    /*margin: 16px;*/
    float: left;
    display: flex;
    /*flex-direction: column;*/
}

#logo {
    line-height: 13pt;
    align-items: center;
    display: flex;
    font-weight: bold;
    font-size: 12pt;
}

#logo-img {
    flex-basis: 64px;
}

#accountinfo {
    text-align: right;
    display: flex;
    flex-direction: column;
    height: 100%;
    margin-right: 8px;
}

.chall-title {
    flex: 1;
    font-weight: bold;
    margin: 0px;
}

.score {
    margin: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.score-right {
    margin: 0px;
    display: flex;
    align-items: center;
    text-align: justify;
    justify-content: flex-end;
}

.flexcell {
    flex: 1;
}

#footer-logo {
    height: 48px;
    border-radius: 24px;
    vertical-align: middle;
    padding: 2px;
}

img {
    height: 100%;
}

.red {
    color: #B82814;
}

.left {
    text-align: left;
    float: left;
}

#svgContainer {
	z-index: -1;
	position:absolute;
    left: 0px;
    top: 64px;
}
.gridcontainer {
    display: grid;
    width: auto;
    height: auto;
    grid-auto-columns: 256px;
    grid-auto-rows: 64px;
    grid-column-gap: 150px;
    grid-row-gap: 125px;
    margin-left: 25px;
    margin-top: 75px;
}

.col-0 {
    grid-column-start: 1;
    grid-column-end: 1;
    display: grid;
}
.col-1 {
    grid-column-start: 2;
    grid-column-end: 2;
    display: grid;
}
.col-2 {
    grid-column-start: 3;
    grid-column-end: 3;
    display: grid;
}
.col-3 {
    grid-column-start: 4;
    grid-column-end: 4;
    display: grid;
}
.col-4 {
    grid-column-start: 5;
    grid-column-end: 5;
    display: grid;
}

dialog {
    border: none;
    box-shadow: 2.5px 2.5px 10px -2.5px;
}

dialog + .backdrop {
    background: rgba(0, 0, 0, .5);
}

.pointicon {
    content: url("logo_outline.svg");
    width: 1em;
    height: 1em;
    margin-right: .25em;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}
.pointicon:hover {
    animation-name:            rotate;
    animation-duration:        3s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

#flaginput {
}

h1 {
    text-align: center;
    margin: 0px;
}

h3 {
    margin: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: normal;
}

#detailview {
    width: 512px;
}

#detailpoints {
}

#detailclosebutton {
    float: right;
    font-size: 16pt;
}

#detailform {
    display: flex;
}

.fakelink {
    font-size: 10pt;
}

.fakelink:hover {
    color: rgb(20, 185, 103);
    text-decoration: underline;
    align-self: flex-end;
    cursor: pointer;
}

#loginbutton {
    margin-top: auto;
    margin-bottom: auto;
    font-size: 16pt;
}

